# python-rye-blacksheep

./: Dockerfile  README.md  pyproject.toml
src/: main.py
tests/: test_server.py
