[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "uvicorn>=0.30.1",
    "blacksheep>=2.0.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.rye.scripts]
"dev" = "uvicorn src.main:app --port 44777 --reload"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
